Add index.js to Challenge 1

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Challenge W1</title>
+    <script src="site.js"></script>
   </head>
   <body>
     <h1>Este es mi documento de la semana 1</h1>
